--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           </center>
 <br>
 <center><h3>
-Name <font color=blue> Saima Rahaman Eyana</font> </h3>
+Name: <font color=blue> Saima Rahaman Eyana</font> </h3>
 </center>
         </th>
     </tr>
@@ -48,17 +48,17 @@ Name <font color=blue> Saima Rahaman Eyana</font> </h3>
   </tr>
   </table>
 <b><h1> Motivation For Studying In CSE :</h1></b>
-<p> I'm studying bscse at <a href="http://www.uiu.ac.bd/"> United International University</a> . You know why I'm study in CSE ?
+<p><center> I'm studying bscse at <a href="http://www.uiu.ac.bd/"> United International University</a> . You know why I'm study in CSE ?
 Because The most important aspect of computer science is problem solving, an essential skill for life .
 Every industry uses computers so naturally computer scientists can work in any. Problems in science, engineering, health care, and so many other areas can be solved by computers.
- It's up to the computer scientist to figure out how, and design the software to apply the solution .</p>
+ It's up to the computer scientist to figure out how, and design the software to apply the solution .</center></p>
 
 
 <b><h1> Future Plan :</h1></b>
 
-<p> My future plan is to be a Softwere Engineer . First of all I will make a highly secorited process in future that can give our Banks safty and protect from bad hacker who hacked for their worth .
+<p><center> My future plan is to be a Softwere Engineer . First of all I will make a highly secorited process in future that can give our Banks safty and protect from bad hacker who hacked for their worth .
 And I've another plan and that is I will make some softweres,some apps such a <a href="https://www.netflix.com/bd"><font color=blue>netflix,</a>
-Youtube,Uc Browser,</font> which can help our people for leading an easy life .</p>
+    Youtube,Uc Browser,</font> which can help our people for leading an easy life .</center></p>
 <center> <a href="info.html"><button type="button"onclick="align"> <b> Click here for another info</b> </button></a></center>
 </body>
 </html>
